[be] 방초대목록 응답에 보낸 유저정보 추가
